# SIRE-segmentation

./: .gitignore  LICENSE  README.md  aaa_wrapper.py  pyproject.toml  reconstruct_aaa.py  run_inference.py
notebooks/: utilities.ipynb
src/sire/data/: dataloader.py  polar_sampler.py  preprocessors.py  transforms.py
src/sire/inference/: inference_models.py  segmentator_tracker.py  totalsegmentator_processor.py
src/sire/inference/utils/: step_schedulers.py  stopping_criterions.py  tracked_vessel.py  vessel_config.py
src/sire/inr/: __init__.py  data.py  inr.py  losses.py  models.py
src/sire/losses/: euclidean_loss.py  ht_losses.py
src/sire/models/: sire_base.py  sire_seg.py  sire_tracker.py
src/sire/models/networks/: dilation_net.py  gem_gcn.py
src/sire/reconstruct/: mesh_merger.py  vascular_model.py
src/sire/utils/: affine.py  dsnt.py  planar_projection.py  tracker.py  wandb.py  yaml.py
