[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sire"
version = "1.0.0"
description = "SIRE segmentation library"
readme = "README.md"
authors = [{ name = "Patryk Rygiel" }]
requires-python = ">= 3.11"

dependencies = [
    "torch ~= 2.1",
    "torch-geometric ~= 2.4",
    "torch_scatter ~= 2.1",
    "torch_sparse ~= 0.6",
    "torch_cluster ~= 1.6",
    "torch_spline_conv ~= 1.2",
    "pytorch-lightning ~= 2.1",
    "onnx ~= 1.15",
    "onnxruntime ~= 1.16",
    "monai[nibabel, skimage, pillow, tensorboard, torchvision, itk, tqdm] ~= 1.3",
    "torchmetrics ~= 0.11",
    "scipy ~= 1.10",
    "numpy ~= 1.24",
    "vtk ~= 9.3.0",
    "SimpleITK ~= 2.3",
    "pyvista ~= 0.42",
    "trimesh ~= 4.0",
    "open3d ~= 0.18",
    "typer ~= 0.9",
    "h5py ~= 3.10",
    "pqdm ~= 0.2",
    "pytransform3d ~= 3.5",
    "shapely ~= 2.0",
    "kornia ~= 0.7",
    "logdecorator ~= 2.4",
    "pysdf ~= 0.1",
    "TotalSegmentator ~= 2.1.0",
    "gem_cnn@git+https://github.com/Qualcomm-AI-research/gauge-equivariant-mesh-cnn.git",
]

[project.optional-dependencies]
logging = ["wandb ~= 0.16"]
jupyter = [
    "jupyterlab ~= 3.6",
    "pandas ~= 2.0",
    "matplotlib ~= 3.7",
    "seaborn ~= 0.12",
    "plotly ~= 5.14",
    "trame ~= 3.3",
    "trame-vtk ~= 2.6",
    "trame-vuetify ~= 2.3",
    "ipywidgets ~= 8.1",
]
lint = [
    "black ~= 22.6",
    "autoflake ~= 1.4",
    "flake8 ~= 4.0",
    "flake8-docstrings ~= 1.6",
    "pyproject-flake8 ~= 0.0.1a4",
    "isort ~= 5.10",
    "pymarkdownlnt ~= 0.9",
    "pre-commit ~= 2.20",
]
dev = ["sire[logging, jupyter, lint]"]

[project.urls]
"Source" = "https://github.com/PatRyg99/SIRE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line_length = 120

[tool.flake8]
extend_exclude = [".venv/", "build/", "dist/", "docs/"]
per_file_ignores = ["**/_[a-z]*.py:D", "tests/*.py:D", "*.pyi:D"]
ignore = [
    "D", # pydocstyle
    "E", # pycodestyle
    "W", # pycodestyle
]
ignore_decorators = "property" # https://github.com/PyCQA/pydocstyle/pull/546

[tool.isort]
profile = "black"
line_length = 120
order_by_type = true
lines_between_types = 1
combine_as_imports = true
force_grid_wrap = 5
known_first_party = "sire"
